enemies spawn bug fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,6 @@ file(GLOB SOURCE "src/*.cpp")
 
 if(WIN32)
 add_executable(some_game_with_timer ${SOURCE})
-elseif(UNIX)
-add_executable(some_game_with_timer ${SOURCE})
 else()
 message("Unknown platform")
 endif()
@@ -22,7 +20,7 @@ find_package(Vulkan)
 if(Vulkan_FOUND)
 target_link_libraries(some_game_with_timer PRIVATE Vulkan::Vulkan)
 target_include_directories(some_game_with_timer PRIVATE Vulkan::Vulkan)
-else()
+elseif(WIN32)
 target_link_directories(some_game_with_timer PRIVATE "./vulkan_not_found_libs")
 target_link_libraries(some_game_with_timer PRIVATE "vulkan-1")
 target_include_directories(some_game_with_timer PRIVATE "./vulkan_not_found_includes")
